force-app/main/default/objects/Agent_Action_Log__c/Agent_Action_Log__c.object-meta.xml
<CustomObject>
    <description>Immutable audit trail of every agent action. Insert-only. One record per operation.</description>
    <label>Agent Action Log</label>
    <nameField>
        <displayFormat>AAL-{0000000}</displayFormat>
        <label>Action Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Action Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>