force-app/main/default/objects/Agent_Action_Log__c/fields/Accepted_By_User__c.field-meta.xml
<CustomField>
    <fullName>Accepted_By_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the user accepted the automation</description>
    <inlineHelpText>Checked if the end user accepted the suggested automation</inlineHelpText>
    <label>Accepted By User</label>
    <type>Checkbox</type>
</CustomField>