force-app/main/default/objects/Agent_Action_Log__c/fields/Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Name__c</fullName>
    <description>Free-text label for the action. Primary column in LWC action history datatable.</description>
    <label>Action Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>