force-app/main/default/objects/Agent_Action_Log__c/fields/Action_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Action_Timestamp__c</fullName>
    <description>When the agent action occurred</description>
    <inlineHelpText>Timestamp of the action</inlineHelpText>
    <label>Action Timestamp</label>
    <type>DateTime</type>
</CustomField>