force-app/main/default/objects/Agent_Action_Log__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <description>Controlled vocabulary for action classification.</description>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automation_Created</fullName>
                <label>Automation Created</label>
            </value>
            <value>
                <fullName>Record_Updated</fullName>
                <label>Record Updated</label>
            </value>
            <value>
                <fullName>Suggestion_Accepted</fullName>
                <label>Suggestion Accepted</label>
            </value>
            <value>
                <fullName>Suggestion_Dismissed</fullName>
                <label>Suggestion Dismissed</label>
            </value>
            <value>
                <fullName>Cross_Cloud_Triggered</fullName>
                <label>Cross Cloud Triggered</label>
            </value>
            <value>
                <fullName>Memory_Reinforced</fullName>
                <label>Memory Reinforced</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>