force-app/main/default/objects/Agent_Action_Log__c/fields/Agent_Memory__c.field-meta.xml
<CustomField>
    <fullName>Agent_Memory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional lookup to the parent Agent_Memory__c record.</description>
    <label>Agent Memory</label>
    <referenceTo>Agent_Memory__c</referenceTo>
    <relationshipLabel>Action Logs</relationshipLabel>
    <relationshipName>Action_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>