force-app/main/default/objects/Agent_Action_Log__c/fields/Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>Entity_Id__c</fullName>
    <description>18-char Salesforce record ID of the entity this log entry is associated with.</description>
    <label>Entity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>