force-app/main/default/objects/Agent_Action_Log__c/fields/Executed_By__c.field-meta.xml
<CustomField>
    <fullName>Executed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the User who triggered this log entry.</description>
    <label>Executed By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Action Logs</relationshipLabel>
    <relationshipName>Agent_Action_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>