force-app/main/default/objects/Agent_Action_Log__c/fields/Input_Context__c.field-meta.xml
<CustomField>
    <fullName>Input_Context__c</fullName>
    <description>Stores JSON-serialized input that triggered the action.</description>
    <label>Input Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>