force-app/main/default/objects/Agent_Action_Log__c/fields/Output_Context__c.field-meta.xml
<CustomField>
    <fullName>Output_Context__c</fullName>
    <description>Resulting output/context produced by the agent</description>
    <inlineHelpText>Captured output produced by the agent for this action</inlineHelpText>
    <label>Output Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>