force-app/main/default/objects/Agent_Action_Log__c/fields/Output_Result__c.field-meta.xml
<CustomField>
    <fullName>Output_Result__c</fullName>
    <description>Stores the result of the action if any. Reserved for future use.</description>
    <label>Output Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>