force-app/main/default/objects/Agent_Action_Log__c/fields/User_Accepted__c.field-meta.xml
<CustomField>
    <fullName>User_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the action was explicitly accepted by the user. False for dismissals or system actions.</description>
    <label>User Accepted</label>
    <type>Checkbox</type>
</CustomField>